--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "axios": "^1.2.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "eslint-config-prettier": "^8.7.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-stars": "^2.2.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/react-stars": "^2.2.1",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.7"
   }
 }
